--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "trails": "^3"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
     "eslint": "^3",
     "eslint-config-google": "^0.9.1",
     "eslint-config-trails": "^3",
