--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "trailpack-hapi": "^3.1.1",
     "trailpack-router": "^3",
     "trailpack-winston": "^3.1.1",
-    "trails": "^3"
+    "trails": "^3",
+    "watson-developer-cloud": "^3.2.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
